cmake_minimum_required(VERSION 3.22.1)
project(main)
add_subdirectory(extern/glad)
add_subdirectory(extern/glfw)
add_subdirectory(extern/glm)
set(sources "src/mainLoop.cpp" "src/glfwHandler.cpp" "src/input.cpp" "src/update.cpp" "src/renderer.cpp" "src/shader.cpp" "src/parser.cpp" "src/uniform.cpp" "src/shape.cpp")
add_executable(main src/main.cpp ${sources})
find_package(OpenGL REQUIRED)
target_include_directories(main PRIVATE include PRIVATE extern/glad/include PRIVATE extern)
target_link_libraries(main glad glfw glm OpenGL::GL)
